// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksView Snapshots matches snapshot with error state 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7FA",
      "flex": 1,
    }
  }
  testID="tasks-view-error"
>
  <Text
    style={
      {
        "color": "#F44336",
        "fontFamily": "Ubuntu-Regular",
        "fontSize": 16,
        "fontWeight": "400",
        "padding": 32,
        "textAlign": "center",
      }
    }
    testID="tasks-view-error-text"
  >
    Failed to load tasks
  </Text>
  <Text
    style={
      {
        "color": "#747d8c",
        "fontFamily": "Ubuntu-Medium",
        "fontSize": 18,
        "fontWeight": "500",
        "textAlign": "center",
      }
    }
    testID="tasks-view-error-hint"
  >
    Pull to refresh
  </Text>
</View>
`;

exports[`TasksView Snapshots matches snapshot with loading state 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7FA",
      "flex": 1,
    }
  }
  testID="tasks-view-loading"
>
  <ActivityIndicator
    color="#237cb8"
    size="large"
    testID="tasks-view-loading-spinner"
  />
  <Text
    style={
      {
        "color": "#57606f",
        "fontFamily": "Ubuntu-Regular",
        "fontSize": 16,
        "fontWeight": "400",
        "marginTop": 16,
        "padding": 32,
        "textAlign": "center",
      }
    }
    testID="tasks-view-loading-text"
  >
    Loading tasks...
  </Text>
</View>
`;
